force-app/main/default/objects/Work_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Schema repair v2 2026-04-30</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Takeoff</fullName>
            </value>
            <value>
                <fullName>Takeoff Scheduled</fullName>
            </value>
            <value>
                <fullName>Takeoff In Progress</fullName>
            </value>
            <value>
                <fullName>Takeoff Complete</fullName>
            </value>
            <value>
                <fullName>Pending Quote</fullName>
            </value>
            <value>
                <fullName>Quote Sent</fullName>
            </value>
            <value>
                <fullName>Clear for Schedule</fullName>
            </value>
            <value>
                <fullName>Site Readiness Check</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>FM QI Review</fullName>
            </value>
            <value>
                <fullName>Pending Closeout</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Need Further Info (NFI)</fullName>
            </value>
            <value>
                <fullName>Pending Pull</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>NFI</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>QI Passed</fullName>
            </value>
            <value>
                <fullName>Ready to Schedule</fullName>
            </value>
            <value>
                <fullName>Pending Scheduling</fullName>
            </value>
            <value>
                <fullName>Ready for Scheduling</fullName>
            </value>
            <value>
                <fullName>Pending Material</fullName>
            </value>
            <value>
                <fullName>Site Readiness Pending</fullName>
            </value>
            <value>
                <fullName>Site Readiness Passed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>