force-app/main/default/objects/Work_Order__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Work_Order_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pending Inventory</fullName>
            </value>
            <value>
                <fullName>Pending Site</fullName>
            </value>
            <value>
                <fullName>Loaded</fullName>
            </value>
            <value>
                <fullName>In Route</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Cleaned Up</fullName>
            </value>
            <value>
                <fullName>Request Received</fullName>
            </value>
            <value>
                <fullName>Site Visit Scheduled</fullName>
            </value>
            <value>
                <fullName>Site Visit Complete</fullName>
            </value>
            <value>
                <fullName>Quote Sent</fullName>
            </value>
            <value>
                <fullName>Pending EPO</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Reported</fullName>
            </value>
            <value>
                <fullName>Coverage Determined</fullName>
            </value>
            <value>
                <fullName>FJ Triggered</fullName>
            </value>
            <value>
                <fullName>Pending Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>