force-app/main/default/objects/Work_Order__c/fields/Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Takeoff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Takeoff</label>
    <referenceTo>Takeoff__c</referenceTo>
    <relationshipLabel>Work Orders (Takeoff)</relationshipLabel>
    <relationshipName>Work_Orders_Takeoff</relationshipName>
    <type>Lookup</type>
</CustomField>