force-app/main/default/objects/Work_Order__c/fields/Takeoff_Approved__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set true when the lot takeoff is approved. Gate for locking the schedule. Work Order tier spec Section 8.</description>
    <label>Takeoff Approved</label>
    <type>Checkbox</type>
</CustomField>