force-app/main/default/objects/Work_Order__c/fields/Takeoff_Geotag_Lat__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Geotag_Lat__c</fullName>
    <label>Takeoff Geotag Lat</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>