force-app/main/default/objects/Work_Order__c/fields/Takeoff_Photo_Count__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Photo_Count__c</fullName>
    <label>Takeoff Photo Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>