force-app/main/default/objects/Work_Order__c/fields/Takeoff_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Return_Reason__c</fullName>
    <label>Takeoff Return Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>