force-app/main/default/objects/Work_Order__c/fields/Takeoff_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Started_Date__c</fullName>
    <label>Takeoff Started Date</label>
    <type>DateTime</type>
</CustomField>