force-app/main/default/objects/Work_Order__c/fields/Takeoff_Task_Complete__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Task_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System-set when the FM Takeoff Task (Type=Takeoff) is marked Completed. Combined with Utility_Marking_Complete it flips the bucket to Clear to Schedule.</description>
    <label>Takeoff Task Complete</label>
    <type>Checkbox</type>
</CustomField>