force-app/main/default/objects/Work_Order__c/fields/Takeoff_Tasks_Created__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Tasks_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System-set once the Takeoff Task + 811 Utility Marking Task have been auto-created on the WO entering the 30 Days bucket. Prevents duplicate creation on bucket recalcs.</description>
    <label>Takeoff Tasks Created</label>
    <type>Checkbox</type>
</CustomField>