force-app/main/default/objects/Work_Order__c/fields/Temp_Irrigation_Included__c.field-meta.xml
<CustomField>
    <fullName>Temp_Irrigation_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Irrigation Included</label>
    <type>Checkbox</type>
</CustomField>