force-app/main/default/objects/Work_Order__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>Job revenue, summed from line items priced off the price book. Work Order tier spec Section 5.</description>
    <label>Total Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>