force-app/main/default/objects/Work_Order__c/fields/Traffic_Hold__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Traffic Hold</label>
    <type>Checkbox</type>
</CustomField>