force-app/main/default/objects/Work_Order__c/fields/Traffic_Risk__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Risk__c</fullName>
    <description>Traffic delay severity for the crew route serving this work order. Populated by TrafficSyncService from Traffic_Impact__c. Separate from Traffic_Hold__c which is a binary action flag.</description>
    <label>Traffic Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>