force-app/main/default/objects/Work_Order__c/fields/Trigger_Source__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Source__c</fullName>
    <label>Trigger Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production Install</fullName>
            </value>
            <value>
                <fullName>Closeout</fullName>
            </value>
            <value>
                <fullName>QI Inspection</fullName>
            </value>
            <value>
                <fullName>Warranty Claim</fullName>
            </value>
            <value>
                <fullName>Customer Care Request</fullName>
            </value>
            <value>
                <fullName>Aqua Program</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>