force-app/main/default/objects/Work_Order__c/fields/Truck_Count__c.field-meta.xml
<CustomField>
    <fullName>Truck_Count__c</fullName>
    <label>Truck Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>