force-app/main/default/objects/Work_Order__c/fields/Utility_Marking_Complete__c.field-meta.xml
<CustomField>
    <fullName>Utility_Marking_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System-set when the 811 Utility Marking Task (Type=811 Utility Marking) is marked Completed.</description>
    <label>811 Utility Marking Complete</label>
    <type>Checkbox</type>
</CustomField>