force-app/main/default/objects/Work_Order__c/fields/Utility_Marking_Dispatched_At__c.field-meta.xml
<CustomField>
    <fullName>Utility_Marking_Dispatched_At__c</fullName>
    <description>System-stamped when the 811 locate request email is sent to the utility marking vendor. Used to gate against duplicate sends.</description>
    <label>811 Dispatched At</label>
    <type>DateTime</type>
</CustomField>