force-app/main/default/objects/Work_Order__c/fields/Variance_Hours__c.field-meta.xml
<CustomField>
    <fullName>Variance_Hours__c</fullName>
    <description>Actual Hours minus Goal Hours. Positive = over goal, Negative = under goal. Used by Measuring Cup and FJ analysis. Only meaningful after Actual_Hours__c is populated.</description>
    <formula>Actual_Hours__c - Goal_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>