force-app/main/default/objects/Work_Order__c/fields/Variance_Pct__c.field-meta.xml
<CustomField>
    <fullName>Variance_Pct__c</fullName>
    <description>Variance as a percentage of goal hours. (Actual - Goal) / Goal * 100. Blank if Goal_Hours__c is zero. Used by Measuring Cup efficiency dashboard.</description>
    <formula>IF(Goal_Hours__c = 0, NULL, (Actual_Hours__c - Goal_Hours__c) / Goal_Hours__c * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>