force-app/main/default/objects/Work_Order__c/fields/Vehicle_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stage 9. Crew morning vehicle inspection complete. Required before Begin Drive.</description>
    <label>Vehicle Check Completed</label>
    <type>Checkbox</type>
</CustomField>