force-app/main/default/objects/Work_Order__c/fields/Warranty_Coverage_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Coverage_Status__c</fullName>
    <formula>IF(ISBLANK(Warranty_End_Date__c), &quot;Pending Determination&quot;,
        IF(TODAY() &lt;= Warranty_End_Date__c, &quot;In Coverage&quot;, &quot;Out of Period&quot;))</formula>
    <label>Warranty Coverage Status</label>
    <type>Text</type>
</CustomField>