force-app/main/default/objects/Work_Order__c/fields/Warranty_Determination__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Determination__c</fullName>
    <label>FM Warranty Determination</label>
    <type>TextArea</type>
</CustomField>