force-app/main/default/objects/Work_Order__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <formula>CASE(TEXT(Warranty_Coverage_Type__c),
        &quot;Sod 60 Day Standard&quot;, Warranty_Start_Date__c + 60,
        &quot;Plant 1 Year Standard&quot;, Warranty_Start_Date__c + 365,
        &quot;Hardscape 2 Year Standard&quot;, Warranty_Start_Date__c + 730,
        null)</formula>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>