force-app/main/default/objects/Work_Order__c/fields/Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start_Date__c</fullName>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>