force-app/main/default/objects/Work_Order__c/fields/Warranty_Voided_Reason__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Voided_Reason__c</fullName>
    <label>Warranty Voided Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>