force-app/main/default/objects/Work_Order__c/fields/Weather_Hold__c.field-meta.xml
<CustomField>
    <fullName>Weather_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weather Hold</label>
    <type>Checkbox</type>
</CustomField>