force-app/main/default/objects/Work_Order__c/fields/Weather_Risk__c.field-meta.xml
<CustomField>
    <fullName>Weather_Risk__c</fullName>
    <description>Weather alert severity level for this work order&apos;s job location county. Populated by WeatherSyncService from Weather_Alert__c matching on County__c. Separate from Weather_Hold__c which is a binary action flag.</description>
    <label>Weather Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>