force-app/main/default/objects/Work_Order__c/fields/WO_PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>WO_PO_Amount__c</fullName>
    <description>Builder PO dollar value carried on this Work Order for invoice cross-check. Populated from Builder_PO__c.PO_Amount__c by LOVING_WorkOrder_Derive_From_Lot flow. Display only — source of truth is Builder_PO__c.</description>
    <label>PO Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>