force-app/main/default/objects/Work_Order__c/fields/WO_Supplier__c.field-meta.xml
<CustomField>
    <fullName>WO_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sod/mulch supplier for this Work Order — from Item_Catalog__c or Community default</description>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Supplier)</relationshipLabel>
    <relationshipName>Work_Orders_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>