force-app/main/default/objects/Work_Order__c/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <description>Classifies the type of work this Work Order represents. Used alongside record type for routing, permissions, and service ticket generation. Production Install is the standard builder PO path.</description>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production Install</fullName>
                <default>true</default>
                <label>Production Install</label>
            </value>
            <value>
                <fullName>Finish Job</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Aqua Install</fullName>
            </value>
            <value>
                <fullName>Aqua Check</fullName>
            </value>
            <value>
                <fullName>Aqua Pickup</fullName>
            </value>
            <value>
                <fullName>Lawn Care</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Back Charge</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
                <label>Install (Legacy)</label>
            </value>
            <value>
                <fullName>Service</fullName>
                <label>Service (Legacy)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>