force-app/main/default/objects/Work_Order__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>