force-app/main/default/objects/Work_Order__c/recordTypes/Aqua_Check.recordType-meta.xml
<RecordType>
    <fullName>Aqua_Check</fullName>
    <active>true</active>
    <description>Aqua watering check visit. Captures the three close questions: System Tampered, Turf 1 to 10, Landscape 1 to 10. Flags per Aqua Addendum scoring rules.</description>
    <label>Aqua Check</label>
</RecordType>