force-app/main/default/objects/Work_Order__c/recordTypes/Aqua_Install.recordType-meta.xml
<RecordType>
    <fullName>Aqua_Install</fullName>
    <active>true</active>
    <description>Aqua install ticket running alongside a Production Install on Aqua-flagged communities. Owner: Scott. Triggers watering schedule W1, W2, W3 after install close.</description>
    <label>Aqua Install</label>
</RecordType>