force-app/main/default/objects/Work_Order__c/recordTypes/Aqua_Pickup.recordType-meta.xml
<RecordType>
    <fullName>Aqua_Pickup</fullName>
    <active>true</active>
    <description>Aqua inventory pickup ticket. Reconciles Shop plus Van plus On-Site balances per the Aqua inventory hard rule.</description>
    <label>Aqua Pickup</label>
</RecordType>