force-app/main/default/objects/Work_Order__c/recordTypes/Closing_Care.recordType-meta.xml
<RecordType>
    <fullName>Closing_Care</fullName>
    <active>true</active>
    <description>Closing Care visit WO. Opened on ClosingCare enrollment, closed on ClosingCare exit. Tracks Last_ClosingCare_Visit and ClosingCare_Status across recurring visits.</description>
    <label>Closing Care</label>
</RecordType>