force-app/main/default/objects/Work_Order__c/recordTypes/Finish_Job.recordType-meta.xml
<RecordType>
    <fullName>Finish_Job</fullName>
    <active>true</active>
    <description>FJ ticket. Captures the open-scope remainder of a Production Install that could not be completed onsite. Linked to the originating install via Parent_Work_Order__c. Lifecycle is shortened: no takeoff, scheduling + field exec + closeout only.</description>
    <label>Finish Job</label>
</RecordType>