force-app/main/default/objects/Work_Order__c/recordTypes/Production_Install.recordType-meta.xml
<RecordType>
    <fullName>Production_Install</fullName>
    <active>true</active>
    <description>Primary landscape install WO. Created on PO receipt per stage 4 of the Account to Close process guide. Carries full takeoff, schedule, field exec, closeout, QI, and billing lifecycle.</description>
    <label>Production Install</label>
</RecordType>