force-app/main/default/objects/Work_Order__c/recordTypes/Repair.recordType-meta.xml
<RecordType>
    <fullName>Repair</fullName>
    <active>true</active>
    <description>Back-charge or warranty repair WO. Per stage 17 of the process guide, Repair WOs always link to the original install via Parent_Work_Order__c. Bills separately from the original invoice.</description>
    <label>Repair</label>
</RecordType>