force-app/main/default/objects/Work_Order__c/validationRules/CM_Required_On_Customer_Care.validationRule-meta.xml
<ValidationRule>
    <fullName>CM_Required_On_Customer_Care</fullName>
    <active>true</active>
    <description>Construction Manager required on Customer Care WOs</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),
    (AND(
        ISPICKVAL(Work_Order_Type__c, &quot;Customer Care&quot;),
        ISBLANK(Construction_Manager__c)
    ))
)</errorConditionFormula>
    <errorDisplayField>Construction_Manager__c</errorDisplayField>
    <errorMessage>CM required for builder communications</errorMessage>
</ValidationRule>