force-app/main/default/objects/Work_Order__c/validationRules/FJ_Requires_Parent_WO.validationRule-meta.xml
<ValidationRule>
    <fullName>FJ_Requires_Parent_WO</fullName>
    <active>true</active>
    <description>Finish Job WOs must link to their original install</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),
    (AND(
        Is_Finish_Job__c,
        ISBLANK(Parent_Work_Order__c)
    ))
)</errorConditionFormula>
    <errorDisplayField>Parent_Work_Order__c</errorDisplayField>
    <errorMessage>FJ requires link to original install</errorMessage>
</ValidationRule>