force-app/main/default/objects/Work_Order__c/validationRules/Scheduled_Date_Min_48h.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Date_Min_48h</fullName>
    <active>true</active>
    <description>Cannot schedule a WO within 48 hours of today</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),
    (AND(
        NOT(ISBLANK(Requested_Install_Date__c)),
        Requested_Install_Date__c &lt; (TODAY() + 2)
    ))
)</errorConditionFormula>
    <errorDisplayField>Requested_Install_Date__c</errorDisplayField>
    <errorMessage>Cannot schedule within 48 hours</errorMessage>
</ValidationRule>