force-app/main/default/objects/Work_Order__c/validationRules/Warranty_Requires_Parent_WO.validationRule-meta.xml
<ValidationRule>
    <fullName>Warranty_Requires_Parent_WO</fullName>
    <active>true</active>
    <description>Warranty WOs must link to original install</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),
    (AND(
        Is_Warranty__c,
        ISBLANK(Parent_Work_Order__c)
    ))
)</errorConditionFormula>
    <errorDisplayField>Parent_Work_Order__c</errorDisplayField>
    <errorMessage>Warranty must link to original</errorMessage>
</ValidationRule>