force-app/main/default/objects/Work_Order__c/validationRules/WO_Community_Must_Match_Lot.validationRule-meta.xml
<ValidationRule>
    <fullName>WO_Community_Must_Match_Lot</fullName>
    <active>true</active>
    <description>Community must equal the Lot Community. LOVING_WorkOrder_Derive_From_Lot sets this on creation — rule catches manual overrides.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Lot__c)),
  NOT(ISBLANK(Community__c)),
  Community__c != Lot__r.Community__c
)</errorConditionFormula>
    <errorDisplayField>Community__c</errorDisplayField>
    <errorMessage>Community must match the Community on the selected Lot. The Lot determines the Community in the Production Landscape hierarchy. To change the Community, update the Lot assignment first.</errorMessage>
</ValidationRule>