force-app/main/default/objects/Work_Order__c/validationRules/WO_Invoice_Division_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>WO_Invoice_Division_Only</fullName>
    <active>true</active>
    <description>Work Orders and invoices must attach to a Builder Division, never a Builder Parent. Spec Section 8.</description>
    <errorConditionFormula>Builder_Market_Account__r.RecordType.DeveloperName = &quot;Builder_Parent&quot;</errorConditionFormula>
    <errorDisplayField>Builder_Market_Account__c</errorDisplayField>
    <errorMessage>Work Orders must attach to a Builder Division, not a Builder Parent. The Parent is roll-up only.</errorMessage>
</ValidationRule>